tests/snapshots/file@class@inherited_method.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  inFoo() {\n    print \"in foo\";\n  }\n}\n\nclass Bar < Foo {\n  inBar() {\n    print \"in bar\";\n  }\n}\n\nclass Baz < Bar {\n  inBaz() {\n    print \"in baz\";\n  }\n}\n\nvar baz = Baz();\nbaz.inFoo(); // expect: in foo\nbaz.inBar(); // expect: in bar\nbaz.inBaz(); // expect: in baz\n"
input_file: crafting_interpreters_test_files/class/inherited_method.lox
---
OUT: 
in foo
in bar
in baz

===
ERR:
