tests/snapshots/file@class@local_inherit_other.lox.snap
---
source: tests/common/mod.rs
description: "class A {}\n\nfun f() {\n  class B < A {}\n  return B;\n}\n\nprint f(); // expect: B\n"
input_file: crafting_interpreters_test_files/class/local_inherit_other.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected LBrace, found '<'
   ╭─[4:11]
 3 │ fun f() {
 4 │   class B < A {}
   ·           ┬
   ·           ╰── here
 5 │   return B;
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this', found '}'
   ╭─[6:1]
 5 │   return B;
 6 │ }
   · ┬
   · ╰── here
 7 │ 
   ╰────
